# itch-lob-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pages-deploy.yml
bench/: BUDGET.md  CI_INTEGRATION.md  HARDWARE_PROFILING.md  README.md  THREADED_PIPELINE_FINDINGS.md  bench_main.cpp  bench_threaded_main.cpp  check_budget.py  ci_history.csv  fetch_itch_day.sh  hw_profile.sh  plot.py  results.csv  results_real_day.csv  results_threaded.csv  synthetic_session.hpp
coverage/: README.md  coverage.json  make_badge.py
dashboard/: README.md  index.html
docs/: architecture.md  devlog-orderbook-vs-ladderbook.md
fuzz/: .gitignore  README.md  build_and_run.sh  fuzz_parser.cpp  generate_corpus.cpp
include/book/: ladder_book.hpp  order_book.hpp
include/exec/: almgren_chriss.hpp  execution_strategy.hpp  fill_sim.hpp  pov.hpp  replay_exec_handler.hpp  risk_gate.hpp  twap.hpp  types.hpp  volume_curve.hpp  vwap.hpp
include/io/: gzip_source.hpp  mmap_source.hpp
include/itch/: encode.hpp  messages.hpp  parser.hpp
include/net/: moldudp64.hpp  multicast_receiver.hpp  multicast_test_sender.hpp  query_server.hpp
include/pipeline/: book_snapshot.hpp  book_table.hpp  dispatch_to_book.hpp  message.hpp  spsc_queue.hpp  thread_affinity.hpp  threaded_replay.hpp
src/: live_replay_main.cpp  multicast_sender_main.cpp  replay_exec_main.cpp  replay_main.cpp  replay_query_main.cpp  replay_threaded_main.cpp
tests/: test_book.cpp  test_book_snapshot.cpp  test_exec_almgren_chriss.cpp  test_exec_pov.cpp  test_exec_twap.cpp  test_exec_vwap.cpp  test_fill_sim.cpp  test_full_day_invariants.cpp  test_io.cpp  test_ladder_book.cpp  test_moldudp64.cpp  test_multicast_receiver.cpp  test_parser.cpp  test_query_server.cpp  test_replay_exec.cpp  test_replay_threaded.cpp  test_risk_gate.cpp  test_spsc_queue.cpp  test_thread_affinity.cpp  test_volume_curve.cpp
